compiler/testData/diagnostics/tests/incompleteCode/senselessComparisonWithNull.fir.kt
// DIAGNOSTICS: -UNUSED_EXPRESSION
package d

fun foo(a : IntArray) {
    if (null == <!UNRESOLVED_REFERENCE!>a<!>()<!SYNTAX!><!>
<!SYNTAX!><!>}